--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "@types/react-modal": "^3.16.3",
+    "idb-keyval": "^6.2.1",
+    "jotai": "^2.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
